Migrate build system to Gradle Modularize the program for jlink and jpackage Bump from Java 11 to Java 21 Dark and light themes Other fixes